--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "^7.1.3",
-        "illuminate/support": "5.8.*|^6.0"
+        "php": "^7.3",
+        "illuminate/support": "^8.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
